2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_value.cpp
		the result of env->get_target() can be NULL
		
2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_object.cpp: fixed memory leak

2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		Flash 8 can have local zero register
		
2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>

		* base/tu_timer.cpp
		* base/tu_timer.h
		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_as_classes/as_date.cpp
		* gameswf/gameswf_as_classes/as_date.h
		* gameswf/samples/test_date.fla
		* gameswf/samples/test_date.swf
		* gameswf/win32/VC8/libgameswf.vcproj
		Added the part of 'Date' Action Script Class implementation

2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_movie_def.cpp: fixed m_loaded_length,
		it should be increased on 8 (file start position(4) + file header length(4))
		
2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_impl.*: added SetTabIndex tag reader

2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_shape.cpp: commented out 
		#define DEBUG_DISPLAY_SHAPE_PATH
		it is used for debugging only
		* gameswf/gameswf_object.cpp: fixed the target of property
		* gameswf/gameswf_value.cpp: removed assert(..), target of property can be NULL
		
2007-09-09  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_sprite.cpp: fixed typo
		(sprite_get_bytes_loaded ==> sprite_get_bytes_total)

2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_value.cpp
		A bit cleanup

2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_value.cpp
		* gameswf/gameswf_value.h
		Fixed as_value::operator=
		We should set m_property_target also.

2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h