@@ -1,3 +1,9 @@
+2007-09-16  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* base/grid_index.h
+		* gameswf/gameswf_shape.cpp
+		Fixed memory leaks, USE_NEW_TESSELATOR is switched on
+		
 2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf_value.cpp
